--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,11 @@
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["2024-social-media-image-sizes-reference.png"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
