--- a/manifest.json
+++ b/manifest.json
@@ -7,20 +7,20 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "16": "icons/resizemate-logo-16x16.png",
+      "48": "icons/resizemate-logo-48x48.png",
+      "128": "icons/resizemate-logo-128x128.png"
     },
     "default_title": "ResizeMate"
   },
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/resizemate-logo-16x16.png",
+    "48": "icons/resizemate-logo-48x48.png",
+    "128": "icons/resizemate-logo-128x128.png"
   },
   "web_accessible_resources": [
     {
-      "resources": ["2024-social-media-image-sizes-reference.png"],
+      "resources": ["resize-reference-guide.png"],
       "matches": ["<all_urls>"]
     }
   ]
